fix: fix img overflow in post

--- a/source/css/acanal.css
+++ b/source/css/acanal.css
@@ -44,6 +44,10 @@ body {
   font-weight: normal；
 }
 
+.post-body p img {
+  max-width: 100%;
+}
+
 h1 {
   font-size: 2em;
   text-align: center;
